<resources>
    <string name="app_name">Meditation Sound App</string>
    <string name="MSG_ASK_PERMISSION">This app needs permissions to use this feature. You can grant them in app settings.</string>
    <string name="str_faq">FAQ</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_policy">Privacy Policy</string>
    <string name="setTimer">Set the Time</string>
    <string name="stopTimer">Stop TIme</string>
    <string name="cancel">Cancel</string>
    <string name="powerSaving">Power saving</string>
    <string name="NightMode">Night mode</string>
    <string name="DeviceVolume">Device volume bar</string>
    <string name="FadingCountdown">Fading during the countdown</string>
    <string name="DefaultVolume">Default volume of the sounds</string>
    <string name="TimerInterface">Timer interface</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="select_sound">Select the page</string>
    <string name="select_ambience">Select the ambience</string>
    <string name="play_all">Play All</string>
    <string name="play_all_msg">Select the duration of each ambience</string>
    <string name="play">Play</string>
    <string name="Empty_list">Empty List</string>
    <string name="favourite_msg">Enter ambiance name: </string>

</resources>