<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    android:background="@drawable/sound_dialog_bg">


    <ImageView
        android:id="@+id/IvSelectAmbienceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:orientation="horizontal"
        android:src="@drawable/ic_select_ambience_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IvSelectAmbienceTitle">

        <Spinner
            android:id="@+id/SpinnerPlayAll"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/spinner_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TvPlaySoundsMsg"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/TvPlaySoundsMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:paddingTop="5dp"
            android:paddingBottom="15dp"
            android:text="@string/play_all_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvPlaySoundsCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/TvPlaySoundsDialog"
            app:layout_constraintTop_toBottomOf="@id/SpinnerPlayAll" />

        <TextView
            android:id="@+id/TvPlaySoundsDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/TvPlaySoundsMsg"
            app:layout_constraintTop_toBottomOf="@id/SpinnerPlayAll" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
