<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ConstSetting"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_25sdp"
    android:layout_marginEnd="@dimen/_25sdp"
    android:background="@drawable/sound_dialog_bg">

    <ImageView
        android:id="@+id/IvSettingTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:orientation="horizontal"
        android:src="@drawable/ic_setting_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <!--    <FrameLayout-->
    <!--        android:id="@+id/FlNativeSetting"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="@dimen/_10sdp"-->
    <!--        android:layout_marginTop="@dimen/_15sdp"-->
    <!--        android:layout_marginEnd="@dimen/_10sdp"-->
    <!--        android:layout_marginBottom="@dimen/_10sdp"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/TvNightMode"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/IvSettingTitle" />-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
        app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
        app:layout_constraintTop_toBottomOf="@id/IvSettingTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TvNightMode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center_vertical"
                android:text="@string/NightMode"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@+id/SwitchNight"
                app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
                app:layout_constraintTop_toBottomOf="@id/IvSettingTitle" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SwitchNight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/TvNightMode"
                app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
                app:layout_constraintTop_toTopOf="@id/TvNightMode"
                app:track="@drawable/track_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TvDeviceVolume"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.9"
                android:gravity="center_vertical"
                android:text="@string/DeviceVolume"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintEnd_toStartOf="@+id/SwitchDevice"
                app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
                app:layout_constraintTop_toBottomOf="@id/TvNightMode" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/SwitchDevice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/TvDeviceVolume"
                app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
                app:layout_constraintTop_toTopOf="@id/TvDeviceVolume"
                app:track="@drawable/track_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/TvFadingCountdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/FadingCountdown"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
            app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
            app:layout_constraintTop_toBottomOf="@id/TvDeviceVolume" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinnerCountdown"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="0.7"
                android:background="@drawable/spinner_bg"
                app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
                app:layout_constraintTop_toBottomOf="@+id/TvFadingCountdown" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/TvDeviceVolume"
                app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
                app:layout_constraintTop_toTopOf="@id/TvDeviceVolume"
                app:track="@drawable/track_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/TvDefaultVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/DefaultVolume"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
            app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
            app:layout_constraintTop_toBottomOf="@id/SpinnerCountdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinnerDefaultVolume"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="0.7"
                android:background="@drawable/spinner_bg"
                app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
                app:layout_constraintTop_toBottomOf="@+id/TvDefaultVolume" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/TvDeviceVolume"
                app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
                app:layout_constraintTop_toTopOf="@id/TvDeviceVolume"
                app:track="@drawable/track_selector" />
        </LinearLayout>

        <TextView
            android:id="@+id/TvTimerInterface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:text="@string/TimerInterface"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
            app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
            app:layout_constraintTop_toBottomOf="@id/SpinnerDefaultVolume" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/SpinnerTimerInterface"
                android:layout_width="0dp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="0.7"
                android:background="@drawable/spinner_bg"
                app:layout_constraintStart_toStartOf="@id/guideDialogStarts"
                app:layout_constraintTop_toBottomOf="@+id/TvFadingCountdown" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:checked="true"
                android:thumb="@drawable/thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/TvDeviceVolume"
                app:layout_constraintEnd_toEndOf="@id/guideDialogEnds"
                app:layout_constraintTop_toTopOf="@id/TvDeviceVolume"
                app:track="@drawable/track_selector" />
        </LinearLayout>
        <ImageView
            android:id="@+id/IvOkDialogSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_gravity="end"
            android:src="@drawable/ic_ok_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/SpinnerTimerInterface" />

        <TextView
            android:id="@+id/TvCancelDialogSetting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="end"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/IvOkDialogSetting"
            app:layout_constraintTop_toBottomOf="@id/IvOkDialogSetting" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideDialogStarts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideDialogEnds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.92" />
</androidx.constraintlayout.widget.ConstraintLayout>